# DIIG-OPC-IoT

./: .gitignore  README.md
ClientTest/: main-client-roundtrip.cpp  main-client-test.cpp  main-client-throuput.cpp  makefile  run.sh  snap7.cpp  snap7.h  testClient  testClientRoundTrip  testClientThrouput
ClientTest/result-01/: result02.txt  result04.txt
ClientTest/result-03/: result02.txt  result04.txt
ClientTest/result-04/: result02.txt
ClientTest/roundtrip/result01/: result01.txt  result02.txt  result04.txt
ClientTest/roundtrip/result02/: result01.txt  result02.txt  result04.txt
ClientTest/roundtrip/result03/: result01.txt  result02.txt  result04.txt
ClientTest/roundtrip/result04/: result01.txt  result02.txt  result04.txt
ClientTest/throuput/result-01/: result01.txt
ClientTest/throuput/result-02/: result01.txt  result02.txt  result03.txt  (+1 more)
OpcUADIIG-IoT/: CMakeLists.txt  README.md  text.txt
OpcUADIIG-IoT/dbs/: keyspace.txt  table.txt
OpcUADIIG-IoT/req/: ua_config.h  ua_namespace0.c  ua_nodeids.h  ua_statuscodes.c  ua_statuscodes.h  ua_transport_generated.c  ua_transport_generated.h  ua_transport_generated_encoding_binary.h  ua_transport_generated_handling.h  ua_types_generated.c  ua_types_generated.h  ua_types_generated_encoding_binary.h  ua_types_generated_handling.h
OpcUADIIG-IoT/src/: cassandra.cpp  cassandradriver.h  kafkadriver.h  main-server.cpp  mongodbdriver.h  standards.h  standards.hy
OpcUADIIG-gateway/: CMakeLists.txt  build.sh
OpcUADIIG-gateway/src/: main-Gateway-client-generation.cpp  main-Gateway-testcase.cpp  main-Gateway.cpp
(+15 files in other folders)
